# maliit

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  README.md
src/: error.rs  events.rs  input_method.rs  lib.rs  maliit_dbus.rs
