[package]
name = "maliit"
version = "0.2.0"
edition = "2021"
authors = ["Leyman Maksim <maximleyman@yandex.ru>"]
description = "Maliit framework client library"
keywords = ["maliit", "virtual-keyboard", "aurora-os", "sailfish-os"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/auroraos-rs/maliit"
exclude = ["/.cargo", "./dbus_ifaces", "AGENTS.md"]

[dependencies]
dbus = "0.9"
thiserror = "2.0"
log = "0.4"
